chaned package description

--- a/pdfboxes.dtx
+++ b/pdfboxes.dtx
@@ -25,10 +25,10 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\def\pdfboxesFileName{pdfboxes}
-\def\pdfboxesFileDescription{Set up PDF boxes, e.g. for cropping}
-\def\pdfboxesFileDate{2016/07/01}
-\def\pdfboxesFileVersion{1.0}
+\def\PDFBoxesFileName{pdfboxes}
+\def\PDFBoxesFileDescription{Set up PDF boxes, e.g. for cropping}
+\def\PDFBoxesFileDate{2016/07/01}
+\def\PDFBoxesFileVersion{1.0}
 %</driver|package>
 %<*driver>
 \documentclass[full,english]{l3doc}
